# featuring-data

./: README.md  pyproject.toml
.github/workflows/: pylint.yml
examples/: Housing_Ames_best_hyperparameters_20240503_165017.csv  Housing_Ames_training_results_full_20240512_220503.csv  Housing_Ames_training_results_full_20240604_184809.csv  Titanic_best_hyperparameters_20240503_165224.csv  Titanic_training_results_full_20240503_165224.csv  Titanic_training_results_full_20240512_221027.csv  Titanic_training_results_full_20240604_184816.csv  featuring_data_classification_example.ipynb  featuring_data_regression_example.ipynb
src/featuringdata/featureSelector/: __init__.py  _create_pdf_report.py  _features_select.py  _generate_plots.py  _recursive_fit.py
src/featuringdata/featuresEDA/: __init__.py  _correlation.py  _create_pdf_report.py  _features_eda.py  _generate_plots.py  _initial_eda_functions.py  features_eda.py
